# EndoscopeSystem

./: .gitignore  CMakeLists.txt  README.md  log.txt  编译及运行.txt
EndoscopeM4/: .mxproject  .project  EndoscopeM4.ioc
EndoscopeM4/CA7/: .project  manifest.prop
EndoscopeM4/CM4/: .cproject  .project
EndoscopeM4_v1.2/: .mxproject  .project  EndoscopeM4_v1.2.ioc
EndoscopeM4_v1.2/CA7/: .project  manifest.prop
EndoscopeM4_v1.2/CM4/: .cproject  .project
build_local/: CMakeCache.txt  Makefile  cmake_install.cmake  endoscope
build_local/endoscope_autogen/: deps  mocs_compilation.cpp
config/: endoscope.conf
config/presets/: bronchoscope.json  colonoscope.json  gastroscope.json
docs/: 00_总览与目录.md  01_开发环境搭建.md  02_系统镜像与启动.md  03_项目架构与设计.md  04_V4L2摄像头采集.md  05_Qt界面开发.md  06_图像处理算法.md  07_功能集成与测试.md  08_构建与部署.md  09_常见问题与排错.md  10_后续优化计划.md  13_10_开发记录_FrameQueue零拷贝优化.md  13_1_开发记录_调试临床模式切换.md  13_2_开发记录_冻结帧清晰度优化.md  13_3_开发记录_硬件参数区与白平衡卸载.md  13_4_开发记录_实时处理与离线处理分离.md  13_5_开发记录_新增对比度和饱和度.md  13_6_开发记录_三线程管线优化.md  13_7_开发记录_全程BGR减少颜色转换.md  13_9_开发记录_NEON加速YUYV转BGR.md  14_DCMIPP_ISP学习计划.md  14_OV5640_Sensor_DCMI_无ISP学习计划.md  15_项目开发流程总结.md  16_FPS性能问题总跟踪.md  17_项目进度计划.md  修改总结_Buffer数量验证.md  测试_Buffer数量验证.md  测试指南_Overrun手动测试.md  问题记录.md  验证_Overrun原因.md
docs/13_11_开发记录_M4开发设计文档/: 13_11_00_开发记录_M4开发设计文档总览.md  13_11_01_M4固件编译与烧录流程.md  13_11_02_M4工程CubeMX配置记录.md  (+5 more)
scripts/: arm_toolchain.cmake  build_local.sh  verify_buffer_count.sh  verify_overrun.sh
src/: main.cpp
test_data/: analyze_test_images.py  generate_test_images.py  test_adaptive_sharpen.cpp  test_halo_effect  test_halo_effect.cpp  test_text_sharpen  test_text_sharpen.cpp  test_usm_formula  test_usm_formula.cpp  test_usm_parameters  test_usm_parameters.cpp  测试方法.md
(+289 files in other folders)
